missing selenium tests and report